--- a/Proyecto2GUI/mainFormLector.resx
+++ b/Proyecto2GUI/mainFormLector.resx
@@ -259,4 +259,19 @@
         RU5ErkJggg==
 </value>
   </data>
+  <data name="btnDeshacer.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAYAAAAe2bNZAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
+        MAAA6mAAADqYAAAXcJy6UTwAAAAHdElNRQfoCwYEGyT2RNoVAAAB+UlEQVRYR+3Wv0tVYRzH8UtZkUSW
+        zmEN6SZIm1NB/gkaOArZ4lQtDS7iEFhEtIhgzUFbNCg4OdXQJri5GQouolb04/r+XL7fw8Nzz733ueA5
+        g54PvIZ7zvd5nu89557nnlqVKucm9Xq9SenJayJUWqKFb2IOb3HHjlllwfHFjBp5D4+aKqcZX8jEjRzh
+        EYpvxhcxeY08Qw+KbcYXMHEjh3iKC4hrk3SVYGDcyC/Mox/X0ZdAdVcRzmsrJcQGXMMKwvzEd3zFt0Sq
+        XccrjOEi0puywns4wGlmH4vQFU9ryIoG8AVh/mCnSz+g31mYD9DtS25GbmMVnmNob7lrhhIM4z6Wodus
+        /McLdNWMDCJsSN90AnFdJ5egBn5D2Ya+UON823iRiRvaQ7bhSauENeiF33pdnWm0HZ/FC03c0C4eImky
+        r8MsPK+RNL4RLzZxQ9pzkibzOkziH5QlJI3P4gOMGtJG+Bmjdswq8+M15jk8L9FxfFN8kNF/0pXwWKuE
+        NdB2sQHlL6bQdnzL+MBYmLzz5gb0DuS3aBO30Dh/6vGJoSs3ggcYx2OsQVdD0eP9BMU0ovjk0I9UT5s2
+        Of256jH26PMCsttcSHxyaJeOo4a2MIPLKK4RxReA3o3f4BM+4h20wWXvzK6wxAtBrwu5L2GlJG/hUJUq
+        Zzi12gnsSKQwazlX5AAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
